k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rewear-backend-service
spec:
  type: NodePort
  selector:
    app: rewear-backend
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
