k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rewear-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: rewear-frontend
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30008
